# cw-orch-workshop

./: .env.example  Cargo.toml  README.md  build.sh
artifacts/: checksums.txt  checksums_intermediate.txt  counter_contract.wasm  cw721_minter.wasm
contracts/counter/: Cargo.toml
contracts/counter/examples/: interact.rs  upload.rs
contracts/counter/src/: contract.rs  interface.rs  lib.rs  msg.rs  state.rs
contracts/counter/tests/: integration_tests.rs
contracts/minter/: Cargo.toml  state.json
contracts/minter/examples/: 3-daemon-generic.rs  5-deploy.rs  deploy.rs
contracts/minter/src/: contract.rs  deploy.rs  error.rs  execute.rs  interface.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/minter/tests/: 2-1-reply-endpoint.rs  2-mock.rs  2-reply-endpoint.rs  3-mock-generic.rs  3-test-tube-generic.rs  4-mock-deploy.rs  4-test-tube-deploy.rs  test-tube-generic.rs
scripts/: Cargo.toml
scripts/examples/: 5-load.rs
