[workspace]
members = ["contracts/*", "scripts"]


[workspace.package]
version = "0.1.0"
authors = ["Kayanski <kowalski.web3@gmail.com>"]
edition = "2021"
homepage = "https://abstract.money"
documentation = "https://orchestrator.abstract.money/"
repository = "https://github.com/AbstractSDK/cw-orchestrator"
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "framework"]


[workspace.dependencies]
cosmwasm-std = { version = "1.5.0", default-features = false }
cw-storage-plus = "1.0"
cw2 = "1.0"
cosmwasm-schema = "1.2"
schemars = "0.8.10"
thiserror = { version = "1.0.21" }


cw-orch = { version = "0.22.0" }
cw721-base = { git = "http://github.com/AbstractSDK/cw-nfts.git", version = "0.18.0", features = [
    "library",
] }
cw721 = "0.18.0"
