[package]
name = "scripts"
version = "0.1.0"
edition = { workspace = true }

[lib]

[features]

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = "1.0"
cw2 = "1.0"
cosmwasm-schema = "1.2"
schemars = "0.8.10"
thiserror = { version = "1.0.21" }
cw-orch = "0.22.0"
cw721-minter = { version = "0.1.0", path = "../contracts/minter" }

[dev-dependencies]
# Deps for deployment
dotenv = { version = "0.15.0" }
pretty_env_logger = { version = "0.5.0" }
cw-orch = { version = "0.22.0", features = ["daemon", "osmosis-test-tube"] }
