[package]
name = "counter-contract"
version = "0.11.0"
description = "counter constract"
keywords = ["cosmwasm", "blockchain"]
edition = { workspace = true }
exclude = [".env"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []

[dependencies]
# Usual Cosmwasm dependencies
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cosmwasm-schema = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }

# Cw-orch
cw-orch = { workspace = true }

[dev-dependencies]
# Deps for deployment (environment vars and logger)
dotenv = { version = "0.15.0" }
pretty_env_logger = { version = "0.5.0" }

# Adding daemon and osmosis-test-tube features only in dev-dependencies (if provided in dependencies, WASM will NOT compile)
cw-orch = { workspace = true, features = ["daemon", "osmosis-test-tube"] }
